fixed mobile menu not showing on scroll

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -120,7 +120,9 @@
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 889px) {
   .nav-menu-expand {
-    min-height: 100vh !important;
+    position: fixed !important;
+    bottom: 0;
+    height: 100vh !important;
     flex-direction: column;
     justify-content: flex-start !important;
     align-items: center;
